# md_viewer

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: 2026-06-28-md-viewer-design.md  2026-06-28-md-viewer-impl-plan.md
docs/superpowers/plans/: 2026-06-29-md-viewer-branding.md
docs/superpowers/specs/: 2026-06-29-md-viewer-branding-design.md  2026-07-06-md-viewer-v2-features-design.md
samples/: basic.md  code.md  frontmatter.md  gfm.md  images.md  wikilinks.md
src/md_viewer/: api.py  cli.py  config.py  encoding.py  render.py  security.py  server.py  tree.py
src/md_viewer/static/: app.js  style.css
src/md_viewer/templates/: index.html
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_encoding.py  test_render.py  test_security.py  test_tree.py
