[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md-viewer"
version = "0.1.0"
description = "Local Markdown viewer served from a Docker container"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.3",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.4.2",
    "linkify-it-py==2.0.3",
    "nh3==0.2.20",
    "pygments==2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
